Added tab labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <string name="app_name">SmokerMonitor</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Temperatures</string>
+    <string name="title_section2">Timers</string>
+    <string name="title_section3">Set Point</string>
+    <string name="title_section4">PID Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
