--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_section3">Set Point</string>
     <string name="title_section4">PID Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="no_label">No Label!</string>
     <string name="action_settings">Settings</string>
 
 </resources>
