--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="no_label">No Label!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_erase">Erase</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
